--- a/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -166,7 +166,7 @@ ContentBrowserTab1.ActiveTypeFilters=
 ContentBrowserTab1.EnabledTypeFilters=
 ContentBrowserTab1.ActiveFrontendFilters=
 ContentBrowserTab1.EnabledFrontendFilters=
-ContentBrowserTab1.SelectedPaths=/Game/Blueprints/Pawns
+ContentBrowserTab1.SelectedPaths=/Game/Blueprints/Actors
 ContentBrowserTab1.Favorites.SelectedPaths=
 FavoritePaths=
 ContentBrowserTab1.CollectionsExpanded=True
@@ -1060,7 +1060,7 @@ AudioSynesthesiaEditor.TimeStamp=2021.02.20-18.00.06
 AudioSynesthesiaEditor.LastCompileMethod=Unknown
 InternationalizationSettings.TimeStamp=2021.02.20-17.10.16
 InternationalizationSettings.LastCompileMethod=Unknown
-ToonTanks.TimeStamp=2021.07.15-09.54.13
+ToonTanks.TimeStamp=2021.07.21-18.08.58
 ToonTanks.LastCompileMethod=Runtime
 BlueprintGraph.TimeStamp=2021.02.20-17.10.07
 BlueprintGraph.LastCompileMethod=Unknown
@@ -1106,7 +1106,8 @@ FloorScale=1.000000
 FloorScale3D=(X=1.000000,Y=1.000000,Z=1.000000)
 
 [AssetEditorSubsystem]
-CleanShutdown=True
+CleanShutdown=False
+OpenAssetsAtExit=/Game/Blueprints/Actors/BP_ProjectileBase.BP_ProjectileBase
 
 [DetailCategories]
 StaticMeshActor.TransformCommon=True
@@ -1701,6 +1702,51 @@ PostProcessVolume.Replication=True
 PostProcessVolume.BrushSettings=True
 PostProcessVolume.Actor=True
 K2Node_InputAxisKeyEvent.Input=True
+BP_ProjectileBase_C.Tick=True
+BP_ProjectileBase_C.Damage=True
+BP_ProjectileBase_C.Movement=True
+BP_ProjectileBase_C.Replication=True
+BP_ProjectileBase_C.Rendering=True
+BP_ProjectileBase_C.Collision=True
+BP_ProjectileBase_C.Actor=True
+BP_ProjectileBase_C.Input=True
+ProjectileMovementComponent.Variable=True
+ProjectileMovementComponent.Sockets=True
+ProjectileMovementComponent.Projectile=True
+ProjectileMovementComponent.ProjectileBounces=True
+ProjectileMovementComponent.ProjectileSimulation=True
+ProjectileMovementComponent.ComponentTick=True
+ProjectileMovementComponent.Homing=True
+ProjectileMovementComponent.ProjectileInterpolation=True
+ProjectileMovementComponent.Velocity=True
+ProjectileMovementComponent.PlanarMovement=True
+ProjectileMovementComponent.MovementComponent=True
+ProjectileMovementComponent.Tags=True
+ProjectileMovementComponent.ComponentReplication=True
+ProjectileMovementComponent.Activation=True
+ProjectileMovementComponent.Cooking=True
+ProjectileMovementComponent.Events=True
+BP_ProjectileBase_C.TransformCommon=True
+BP_ProjectileBase_C.StaticMesh=True
+BP_ProjectileBase_C.Materials=True
+BP_ProjectileBase_C.Projectile=True
+BP_ProjectileBase_C.ComponentTick=True
+BP_ProjectileBase_C.ProjectileBounces=True
+BP_ProjectileBase_C.ProjectileSimulation=True
+BP_ProjectileBase_C.Homing=True
+BP_ProjectileBase_C.ProjectileInterpolation=True
+BP_ProjectileBase_C.Physics=True
+BP_ProjectileBase_C.Velocity=True
+BP_ProjectileBase_C.Lighting=True
+BP_ProjectileBase_C.PlanarMovement=True
+BP_ProjectileBase_C.MovementComponent=True
+BP_ProjectileBase_C.Tags=True
+BP_ProjectileBase_C.ComponentReplication=True
+BP_ProjectileBase_C.Activation=True
+BP_ProjectileBase_C.Variable=True
+BP_ProjectileBase_C.Cooking=True
+BP_ProjectileBase_C.Navigation=True
+BP_ProjectileBase_C.VirtualTexture=True
 
 [DetailPropertyExpansion]
 Brush="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
@@ -1714,7 +1760,7 @@ Pawn="\"Object.Components.CapsuleComp.Object.Shape.ShapeColor\" \"Object.Compone
 PawnTank="\"Object.Components.CapsuleComp.Object.Shape.ShapeColor\" \"Object.Components.CapsuleComp.Object.Collision.BodyInstance\" \"Object.Components.CapsuleComp.Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Components.CapsuleComp.Object.Rendering.CustomPrimitiveData\" \"Object.Components.BaseMesh.Object.Rendering.WireframeColorOverride\" \"Object.Components.BaseMesh.Object.Rendering.CustomPrimitiveData\" \"Object.Components.BaseMesh.Object.Lighting.LightmassSettings\" \"Object.Components.BaseMesh.Object.Lighting.LightingChannels\" \"Object.Components.BaseMesh.Object.Collision.BodyInstance\" \"Object.Components.BaseMesh.Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Components.TurretMesh.Object.Rendering.WireframeColorOverride\" \"Object.Components.TurretMesh.Object.Rendering.CustomPrimitiveData\" \"Object.Components.TurretMesh.Object.Lighting.LightmassSettings\" \"Object.Components.TurretMesh.Object.Lighting.LightingChannels\" \"Object.Components.TurretMesh.Object.Collision.BodyInstance\" \"Object.Components.TurretMesh.Object.Collision.BodyInstance.WalkableSlopeOverride\" "
 BP_PawnTurret_C="\"Object.Components.CapsuleComp.Object.Shape.ShapeColor\" \"Object.Components.CapsuleComp.Object.Collision.BodyInstance\" \"Object.Components.CapsuleComp.Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Components.CapsuleComp.Object.Rendering.CustomPrimitiveData\" \"Object.Components.BaseMesh.Object.Rendering.WireframeColorOverride\" \"Object.Components.BaseMesh.Object.Rendering.CustomPrimitiveData\" \"Object.Components.BaseMesh.Object.Lighting.LightmassSettings\" \"Object.Components.BaseMesh.Object.Lighting.LightingChannels\" \"Object.Components.BaseMesh.Object.Collision.BodyInstance\" \"Object.Components.BaseMesh.Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Components.TurretMesh.Object.Rendering.WireframeColorOverride\" \"Object.Components.TurretMesh.Object.Rendering.CustomPrimitiveData\" \"Object.Components.TurretMesh.Object.Lighting.LightmassSettings\" \"Object.Components.TurretMesh.Object.Lighting.LightingChannels\" \"Object.Components.TurretMesh.Object.Collision.BodyInstance\" \"Object.Components.TurretMesh.Object.Collision.BodyInstance.WalkableSlopeOverride\" "
 PawnTurret="\"Object.Components.CapsuleComp.Object.Shape.ShapeColor\" \"Object.Components.CapsuleComp.Object.Collision.BodyInstance\" \"Object.Components.CapsuleComp.Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Components.CapsuleComp.Object.Rendering.CustomPrimitiveData\" \"Object.Components.BaseMesh.Object.Rendering.WireframeColorOverride\" \"Object.Components.BaseMesh.Object.Rendering.CustomPrimitiveData\" \"Object.Components.BaseMesh.Object.Lighting.LightmassSettings\" \"Object.Components.BaseMesh.Object.Lighting.LightingChannels\" \"Object.Components.BaseMesh.Object.Collision.BodyInstance\" \"Object.Components.BaseMesh.Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Components.TurretMesh.Object.Rendering.WireframeColorOverride\" \"Object.Components.TurretMesh.Object.Rendering.CustomPrimitiveData\" \"Object.Components.TurretMesh.Object.Lighting.LightmassSettings\" \"Object.Components.TurretMesh.Object.Lighting.LightingChannels\" \"Object.Components.TurretMesh.Object.Collision.BodyInstance\" \"Object.Components.TurretMesh.Object.Collision.BodyInstance.WalkableSlopeOverride\" "
-InputSettings=
+InputSettings="\"Object.Bindings.ActionMappings.ActionMappings[1]\" \"Object.Bindings.AxisMappings.AxisMappings[8]\" "
 PostProcessVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 Volume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 
@@ -1722,10 +1768,11 @@ Volume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 LastLogListing=MapCheck
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Blueprints/Pawns/BP_PawnTank
-MRUItem1=/Game/Blueprints/Pawns/BP_PawnTurret
-MRUItem2=/Game/Assets/Effects/P_HitEffect
-MRUItem3=/Game/Assets/Effects/P_DeathEffect
+MRUItem0=/Game/Blueprints/Actors/BP_ProjectileBase
+MRUItem1=/Game/Blueprints/Pawns/BP_PawnTank
+MRUItem2=/Game/Blueprints/Pawns/BP_PawnTurret
+MRUItem3=/Game/Assets/Effects/P_HitEffect
+MRUItem4=/Game/Assets/Effects/P_DeathEffect
 
 [CascadeEditor]
 LightDir=P=-45.000004 Y=-179.999969 R=0.000000
