--- a/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -165,7 +165,7 @@ ContentBrowserTab1.ActiveTypeFilters=
 ContentBrowserTab1.EnabledTypeFilters=
 ContentBrowserTab1.ActiveFrontendFilters=
 ContentBrowserTab1.EnabledFrontendFilters=
-ContentBrowserTab1.SelectedPaths=/Game/Blueprints/Actors
+ContentBrowserTab1.SelectedPaths=/Game/Blueprints/Widgets
 ContentBrowserTab1.Favorites.SelectedPaths=
 FavoritePaths=
 ContentBrowserTab1.CollectionsExpanded=True
@@ -1065,6 +1065,8 @@ BlueprintGraph.TimeStamp=2021.02.20-17.10.07
 BlueprintGraph.LastCompileMethod=Unknown
 RawInput.TimeStamp=2021.02.20-17.30.06
 RawInput.LastCompileMethod=Unknown
+SequencerWidgets.TimeStamp=2021.02.20-17.10.29
+SequencerWidgets.LastCompileMethod=Unknown
 
 [MRU]
 MRUItem0=/Game/Maps/Main
@@ -1779,11 +1781,45 @@ HealthComponent.ComponentReplication=True
 HealthComponent.Activation=True
 HealthComponent.Cooking=True
 HealthComponent.Events=True
+TextBlock.Layout=True
+TextBlock.Content=True
+TextBlock.Appearance=True
+TextBlock.Accessibility=True
+TextBlock.Performance=True
+TextBlock.Wrapping=True
+TextBlock.Behavior=True
+TextBlock.Render Transform=True
+TextBlock.Clipping=True
+TextBlock.Navigation=True
+TextBlock.Localization=True
+CanvasPanel.Behavior=True
+CanvasPanel.Accessibility=True
+CanvasPanel.Render Transform=True
+CanvasPanel.Performance=True
+CanvasPanel.Clipping=True
+CanvasPanel.Navigation=True
+CanvasPanel.Localization=True
+PropertyWrapper.Variable=True
+PropertyWrapper.DefaultValueCategory=True
+K2Node_VariableGet.Variable=True
+K2Node_VariableGet.DefaultValueCategory=True
+EdGraph.Graph=True
+EdGraph.Inputs=True
+EdGraph.Outputs=True
+K2Node_CallFunction.Graph=True
+K2Node_CallFunction.Inputs=True
+K2Node_CallFunction.Outputs=True
+K2Node_FunctionEntry.GraphNodeDetail=True
+K2Node_FunctionEntry.Graph=True
+K2Node_FunctionEntry.Inputs=True
+K2Node_FunctionEntry.Outputs=True
+K2Node_VariableSet.Variable=True
+K2Node_VariableSet.DefaultValueCategory=True
 
 [DetailPropertyExpansion]
 Brush="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 EditorLoadingSavingSettings="\"Object.AutoReimport\" \"Object.Blueprints\" \"Object.AutoSave\" "
-Object="\"Object.Collision.BodyInstance\" "
+Object=
 CrashReportsPrivacySettings="\"Object.Options.bSendUnattendedBugReports\" "
 AnalyticsPrivacySettings="\"Object.Options.bSendUsageData\" "
 BP_PawnTank_C="\"Object.Component.Camera.Object.PostProcess.PostProcessSettings\" \"Object.Component.Camera.Object.PostProcess.PostProcessSettings.SceneColorTint\" \"Object.Component.Camera.Object.PostProcess.PostProcessSettings.Bloom1Tint\" \"Object.Component.Camera.Object.PostProcess.PostProcessSettings.Bloom2Tint\" \"Object.Component.Camera.Object.PostProcess.PostProcessSettings.Bloom3Tint\" \"Object.Component.Camera.Object.PostProcess.PostProcessSettings.Bloom4Tint\" \"Object.Component.Camera.Object.PostProcess.PostProcessSettings.Bloom5Tint\" \"Object.Component.Camera.Object.PostProcess.PostProcessSettings.Bloom6Tint\" \"Object.Component.Camera.Object.PostProcess.PostProcessSettings.BloomDirtMaskTint\" \"Object.Component.Camera.Object.PostProcess.PostProcessSettings.AmbientCubemapTint\" \"Object.Component.Camera.Object.PostProcess.PostProcessSettings.LensFlareTint\" \"Object.Component.Camera.Object.PostProcess.PostProcessSettings.LensFlareTints\" \"Object.Component.Camera.Object.PostProcess.PostProcessSettings.LensFlareTints.LensFlareTints[0]\" \"Object.Component.Camera.Object.PostProcess.PostProcessSettings.LensFlareTints.LensFlareTints[1]\" \"Object.Component.Camera.Object.PostProcess.PostProcessSettings.LensFlareTints.LensFlareTints[2]\" \"Object.Component.Camera.Object.PostProcess.PostProcessSettings.LensFlareTints.LensFlareTints[3]\" \"Object.Component.Camera.Object.PostProcess.PostProcessSettings.LensFlareTints.LensFlareTints[4]\" \"Object.Component.Camera.Object.PostProcess.PostProcessSettings.LensFlareTints.LensFlareTints[5]\" \"Object.Component.Camera.Object.PostProcess.PostProcessSettings.LensFlareTints.LensFlareTints[6]\" \"Object.Component.Camera.Object.PostProcess.PostProcessSettings.LensFlareTints.LensFlareTints[7]\" \"Object.Component.Camera.Object.PostProcess.PostProcessSettings.IndirectLightingColor\" \"Object.Component.Camera.Object.PostProcess.PostProcessSettings.WeightedBlendables\" \"Object.Components.CapsuleComp.Object.Shape.ShapeColor\" \"Object.Components.CapsuleComp.Object.Collision.BodyInstance\" \"Object.Components.CapsuleComp.Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Components.CapsuleComp.Object.Rendering.CustomPrimitiveData\" \"Object.Components.BaseMesh.Object.Rendering.WireframeColorOverride\" \"Object.Components.BaseMesh.Object.Rendering.CustomPrimitiveData\" \"Object.Components.BaseMesh.Object.Lighting.LightmassSettings\" \"Object.Components.BaseMesh.Object.Lighting.LightingChannels\" \"Object.Components.BaseMesh.Object.Collision.BodyInstance\" \"Object.Components.BaseMesh.Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Components.TurretMesh.Object.Rendering.WireframeColorOverride\" \"Object.Components.TurretMesh.Object.Rendering.CustomPrimitiveData\" \"Object.Components.TurretMesh.Object.Lighting.LightmassSettings\" \"Object.Components.TurretMesh.Object.Lighting.LightingChannels\" \"Object.Components.TurretMesh.Object.Collision.BodyInstance\" \"Object.Components.TurretMesh.Object.Collision.BodyInstance.WalkableSlopeOverride\" "
@@ -1802,17 +1838,23 @@ SceneComponent="\"Object.Collision.BodyInstance\" "
 ActorComponent="\"Object.Collision.BodyInstance\" "
 BP_ProjectileBase_C="\"Object.Components.ProjectileMesh.Object.Lighting.LightmassSettings\" \"Object.Components.ProjectileMesh.Object.Collision.BodyInstance\" \"Object.Components.ProjectileMesh.Object.Collision.BodyInstance.WalkableSlopeOverride\" "
 ProjectileBase="\"Object.Components.ProjectileMesh.Object.Lighting.LightmassSettings\" \"Object.Components.ProjectileMesh.Object.Collision.BodyInstance\" \"Object.Components.ProjectileMesh.Object.Collision.BodyInstance.WalkableSlopeOverride\" "
+TextBlock="\"Object.Appearance.Font\" "
+TextLayoutWidget="\"Object.Appearance.Font\" "
+Widget=
+Visual=
 
 [MessageLog]
 LastLogListing=MapCheck
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Blueprints/Actors/BP_ProjectileBase
-MRUItem1=/Game/Blueprints/Pawns/BP_PawnTurret
-MRUItem2=/Game/Blueprints/Pawns/BP_PawnTank
-MRUItem3=/Game/Blueprints/GameModes/BP_TankGameModeBase
-MRUItem4=/Game/Assets/Effects/P_HitEffect
-MRUItem5=/Game/Assets/Effects/P_DeathEffect
+MRUItem0=/Game/Blueprints/Widgets/WBP_GameOver
+MRUItem1=/Game/Blueprints/Widgets/WBP_GameStart
+MRUItem2=/Game/Blueprints/Actors/BP_ProjectileBase
+MRUItem3=/Game/Blueprints/Pawns/BP_PawnTurret
+MRUItem4=/Game/Blueprints/Pawns/BP_PawnTank
+MRUItem5=/Game/Blueprints/GameModes/BP_TankGameModeBase
+MRUItem6=/Game/Assets/Effects/P_HitEffect
+MRUItem7=/Game/Assets/Effects/P_DeathEffect
 
 [CascadeEditor]
 LightDir=P=-45.000004 Y=-179.999969 R=0.000000
@@ -2047,7 +2089,7 @@ TcpMessagingSettings=InputSettings.Bindings.ActionMappings,InputSettings.Binding
 TemplateSequenceEditorSettings=InputSettings.Bindings.ActionMappings,InputSettings.Bindings.AxisMappings,InputSettings.Bindings.ActionMappings.Fire,InputSettings.Bindings.AxisMappings.MoveForward,InputSettings.Bindings.AxisMappings.Turn,InputSettings.Bindings.AxisMappings.RotateTurret,GameMapsSettings.DefaultModes.SelectedGameModeDetails,IOSRuntimeSettings.Build.Remote Build Options,
 UdpMessagingSettings=InputSettings.Bindings.ActionMappings,InputSettings.Bindings.AxisMappings,InputSettings.Bindings.ActionMappings.Fire,InputSettings.Bindings.AxisMappings.MoveForward,InputSettings.Bindings.AxisMappings.Turn,InputSettings.Bindings.AxisMappings.RotateTurret,GameMapsSettings.DefaultModes.SelectedGameModeDetails,IOSRuntimeSettings.Build.Remote Build Options,
 WmfMediaSettings=InputSettings.Bindings.ActionMappings,InputSettings.Bindings.AxisMappings,InputSettings.Bindings.ActionMappings.Fire,InputSettings.Bindings.AxisMappings.MoveForward,InputSettings.Bindings.AxisMappings.Turn,InputSettings.Bindings.AxisMappings.RotateTurret,GameMapsSettings.DefaultModes.SelectedGameModeDetails,IOSRuntimeSettings.Build.Remote Build Options,
-BP_PawnTank_C=BP_PawnTank_C.Physics.ConstraintsGroup,BP_PawnTank_C.Rendering.TextureStreaming,BP_PawnTank_C.Rendering.RayTracing,BP_PawnTank_C.Rendering.LOD,BP_PawnTank_C.PostProcess.Lens,BP_PawnTank_C.Collision.Collision,BP_PawnTank_C.PostProcess.Lens|Mobile Depth of FieldAdvanced,BP_PawnTank_C.PostProcess.Lens|Mobile Depth of Field,BP_PawnTank_C.PostProcess.Lens|Bloom,BP_PawnTank_C.PostProcess.Lens|ExposureAdvanced,BP_PawnTank_C.PostProcess.Lens|Exposure,BP_PawnTank_C.PostProcess.Lens|Chromatic Aberration,BP_PawnTank_C.PostProcess.Lens|Camera,BP_PawnTank_C.PostProcess.Lens|Lens Flares,BP_PawnTank_C.PostProcess.Lens|Depth of Field,BP_PawnTank_C.PostProcess.Color Grading|WhiteBalance,BP_PawnTank_C.PostProcess.Color Grading|Shadows,BP_PawnTank_C.PostProcess.Color Grading|Highlights,BP_PawnTank_C.PostProcess.Color Grading,BP_PawnTank_C.PostProcess.Film,BP_PawnTank_C.PostProcess.Rendering Features|Ambient OcclusionAdvanced,BP_PawnTank_C.PostProcess.Rendering Features|Ambient Occlusion,BP_PawnTank_C.PostProcess.Rendering Features|Global Illumination,BP_PawnTank_C.PostProcess.Rendering Features|Light Propagation VolumeAdvanced,BP_PawnTank_C.PostProcess.Rendering Features|Light Propagation Volume,BP_PawnTank_C.PostProcess.Rendering Features|Screen Space Reflections,BP_PawnTank_C.PostProcess.Rendering Features|Ray Tracing Reflections,BP_PawnTank_C.PostProcess.Rendering Features|Ray Tracing Translucency,BP_PawnTank_C.PostProcess.Rendering Features|PathTracing,BP_PawnTank_C.PostProcess.Rendering Features,
+BP_PawnTank_C=BP_PawnTank_C.Physics.ConstraintsGroup,BP_PawnTank_C.Rendering.TextureStreaming,BP_PawnTank_C.Rendering.RayTracing,BP_PawnTank_C.Rendering.LOD,BP_PawnTank_C.PostProcess.Lens,BP_PawnTank_C.Collision.Collision,BP_PawnTank_C.PostProcess.Lens
 CapsuleComponent=
 BP_PawnTurret_C=StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Rendering.TextureStreaming,StaticMeshComponent.Rendering.LOD,StaticMeshComponent.Rendering.RayTracing,
 RawInputSettings=InputSettings.Bindings.ActionMappings,InputSettings.Bindings.AxisMappings,InputSettings.Bindings.ActionMappings.Fire,InputSettings.Bindings.AxisMappings.MoveForward,InputSettings.Bindings.AxisMappings.Turn,InputSettings.Bindings.AxisMappings.RotateTurret,GameMapsSettings.DefaultModes.SelectedGameModeDetails,IOSRuntimeSettings.Build.Remote Build Options,
@@ -2059,6 +2101,8 @@ BP_ProjectileBase_C=BP_ProjectileBase_C.Physics.ConstraintsGroup,BP_ProjectileBa
 /Game/Blueprints/Pawns/BP_PawnTurret.BP_PawnTurret=0
 /Game/Blueprints/Actors/BP_ProjectileBase.BP_ProjectileBase=0
 /Game/Blueprints/GameModes/BP_TankGameModeBase.BP_TankGameModeBase=0
+/Game/Blueprints/Widgets/WBP_GameOver.WBP_GameOver=0
+/Game/Blueprints/Widgets/WBP_GameStart.WBP_GameStart=0
 
 [PlacementMode]
 RecentlyPlaced=/Game/Blueprints/Pawns/BP_PawnTurret.BP_PawnTurret;
@@ -2066,4 +2110,77 @@ RecentlyPlaced=/Game/Blueprints/Pawns/BP_PawnTank.BP_PawnTank;
 
 [SuppressableDialogs]
 Warning_ReparentTitle=False
+ChangeVariableType_Warning=False
+
+[WidgetTemplatesExpanded]
+Editor=False
+Input=False
+Lists=False
+Misc=False
+Optimization=False
+Panel=False
+Primitive=False
+Special Effects=False
+Synth=False
+User Created=False
+Advanced=False
+
+[UMGEditor.Designer]
+PreviewWidth=1280
+PreviewHeight=720
+PreviewAspectRatio=16:9
+bIsInPortraitMode=False
+ProfileName=
+ScaleFactor=1.000000
+bCanPreviewSwapAspectRatio=False
+
+[UMGSequencerSettings SequencerSettings]
+AutoChangeMode=None
+AllowEditsMode=AllEdits
+KeyGroupMode=KeyChanged
+bKeyInterpPropertiesOnly=False
+KeyInterpolation=Auto
+bAutoSetTrackDefaults=False
+SpawnPosition=SSP_Origin
+bCreateSpawnableCameras=True
+bShowRangeSlider=False
+bIsSnapEnabled=True
+bSnapKeyTimesToInterval=True
+bSnapKeyTimesToKeys=True
+bSnapSectionTimesToInterval=True
+bSnapSectionTimesToSections=True
+bSnapKeysAndSectionsToPlayRange=False
+bSnapPlayTimeToKeys=False
+bSnapPlayTimeToInterval=True
+bSnapPlayTimeToPressedKey=True
+bSnapPlayTimeToDraggedKey=True
+bSnapCurveValueToInterval=True
+bShowSelectedNodesOnly=False
+bRewindOnRecord=True
+ZoomPosition=SZP_CurrentTime
+bAutoScrollEnabled=False
+bLinkCurveEditorTimeRange=False
+bSynchronizeCurveEditorSelection=True
+bIsolateCurveEditorToSelection=True
+LoopMode=SLM_NoLoop
+bKeepCursorInPlayRangeWhileScrubbing=False
+bKeepCursorInPlayRange=True
+bKeepPlayRangeInSectionBounds=True
+ZeroPadFrames=0
+bShowCombinedKeyframes=True
+bInfiniteKeyAreas=False
+bShowChannelColors=False
+ReduceKeysTolerance=0.000100
+bDeleteKeysWhenTrimming=True
+bDisableSectionsAfterBaking=True
+bCleanPlaybackMode=True
+bActivateRealtimeViewports=True
+bEvaluateSubSequencesInIsolation=False
+bRerunConstructionScripts=True
+bShowDebugVisualization=False
+bVisualizePreAndPostRoll=True
+bCompileDirectorOnEvaluate=False
+TrajectoryPathCap=250
+bShowOutlinerInfoColumn=True
+FrameNumberDisplayFormat=Seconds
 
